--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@ionic-native/status-bar": "4.6.0",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
+    "ag-grid": "^18.0.1",
+    "ag-grid-angular": "^18.0.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "moment": "^2.22.1",
